--- a/map.html
+++ b/map.html
@@ -64,7 +64,7 @@
   <body>
     <div id="appContainer">
       <!-- Calcite Panel for Legend -->
-      <calcite-panel id="legendPanel" heading="Legend" width-scale="m" style="min-width:220px;max-width:350px;">
+      <calcite-panel id="legendPanel" width-scale="m" style="min-width:220px;max-width:350px;">
         <div style="display:flex;align-items:center;justify-content:space-between;padding:0 1rem 0 0.5rem;">
           <span style="font-weight:bold;font-size:1.1em;">Legend</span>
           <calcite-action id="collapseLegend" icon="chevron-left" text="Collapse Legend" scale="m"></calcite-action>
