--- a/map.html
+++ b/map.html
@@ -64,10 +64,10 @@
   <body>
     <div id="appContainer">
       <!-- Floating Calcite Panel for Legend -->
-      <calcite-panel id="legendPanel" width-scale="s" style="position:absolute;top:90px;left:16px;z-index:100;min-width:220px;max-width:350px;box-shadow:0 2px 6px rgba(0,0,0,0.15);background:white;">
+      <calcite-panel id="legendPanel" width-scale="s" style="position:absolute;top:90px;left:16px;z-index:100;min-width:220px;max-width:350px;box-shadow:0 2px 6px rgba(0,0,0,0.15);background:white;max-height:none;height:auto;padding-bottom:8px;">
         <div style="display:flex;align-items:center;justify-content:space-between;padding:0 1rem 0 0.5rem;">
           <span style="font-weight:bold;font-size:1.1em;">Legend</span>
-          <calcite-action id="collapseLegend" icon="x" text="Close Legend" scale="m"></calcite-action>
+          <calcite-action id="collapseLegend" icon="x" text="Close Legend" scale="s"></calcite-action>
         </div>
         <div id="legendContent"></div>
       </calcite-panel>
@@ -75,7 +75,7 @@
       <div id="viewDiv" style="flex:1;position:relative;"></div>
     </div>
     <!-- Legend expand button, styled like a map widget -->
-    <calcite-action id="expandLegend" icon="legend" text="Show Legend" scale="l" style="position:absolute;top:90px;left:16px;z-index:100;display:none;background:white;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.15);"></calcite-action>
+    <calcite-action id="expandLegend" icon="legend" text="Show Legend" scale="s" style="position:absolute;top:90px;left:16px;z-index:100;display:none;background:white;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.15);"></calcite-action>
 
     <script>
       require([
