--- a/map.html
+++ b/map.html
@@ -80,6 +80,7 @@
     </div>
     <!-- Legend expand button, styled like a map widget -->
     <div id="expandLegendContainer"></div>
+    <calcite-action id="expandLegend" icon="legend" text="Show Legend" scale="s" style="display:none;"></calcite-action>
 
     <script>
       require([
