--- a/map.html
+++ b/map.html
@@ -76,11 +76,11 @@
       <!-- Map container -->
       <div id="viewDiv" style="flex:1;position:relative;"></div>
       <!-- ArcGIS Scale Bar Web Component -->
-      <arcgis-scale-bar id="webScaleBar" style="position:absolute;bottom:16px;right:16px;z-index:99;" units="imperial" type="ruler"></arcgis-scale-bar>
+      <arcgis-scale-bar id="webScaleBar" style="position:absolute;bottom:16px;left:16px;z-index:99;" units="imperial" type="ruler"></arcgis-scale-bar>
     </div>
     <!-- Legend expand button, styled like a map widget -->
     <div id="expandLegendContainer"></div>
-    <calcite-action id="expandLegend" icon="legend" text="Show Legend" scale="s" style="display:none;"></calcite-action>
+    <calcite-action id="expandLegend" icon="legend" text="Show Legend" scale="s" style="display:none;box-shadow:0 2px 6px rgba(0,0,0,0.15);border-radius:6px;background:white;"></calcite-action>
 
     <script>
       require([
@@ -186,25 +186,13 @@
             }
           });
 
-          // Remove the old ScaleBar widget and add the new <arcgis-scale-bar> web component
-          // Remove:
-          // const scaleBar = new ScaleBar({
-          //   view: view,
-          //   unit: "dual" // Displays both metric and imperial units
-          // });
-          // view.ui.add(scaleBar, {
-          //   position: "bottom-right"
-          // });
-
-          // Add the new ArcGIS scale bar web component
-          const scaleBarEl = document.createElement("arcgis-scale-bar");
-          scaleBarEl.setAttribute("position", "bottom-right");
-          scaleBarEl.setAttribute("units", "imperial");
-          scaleBarEl.setAttribute("style", "box-shadow:0 2px 6px rgba(0,0,0,0.10);border-radius:6px;background:white;padding:4px 16px 4px 12px;min-width:120px;max-width:220px;font-size:1.1em;line-height:1.5;display:flex;align-items:center;");
-          // Bind the map view to the scale bar
-          scaleBarEl.view = view;
-          // Add to the map UI
-          view.ui.add(scaleBarEl, "bottom-right");
+          // Bind the map view to the scale bar web component
+          const webScaleBar = document.getElementById("webScaleBar");
+          view.when().then(() => {
+            webScaleBar.view = view;
+          });
+          // Move the scale bar to the bottom-left in the map UI
+          view.ui.add(webScaleBar, "bottom-left");
 
           // Add the legend widget to the drawer
           const legend = new Legend({
